unknown presigned URL

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,7 @@
 #  https://viblo.asia/p/upload-file-len-amazon-s3-su-dung-java-spring-boot-E375zQadlGW
 amazonProperties:
-  endpointUrl: https://s3.ap-southeast-1.amazonaws.com
+  endpointUrl: ${AWS_URL}
   accessKey: ${AWS_ASSESS_KEY}
   secretKey: ${AWS_SECRET_KEY}
   bucketName: ${AWS_BUCKET_NAME}
-
-# End config source "Viblo"
-
+  region: ${AWS_REGION}
